<resources>
    <string name="app_name">Converter Lab</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tel">Тел :  </string>
    <string name="address">Адрес :  </string>
    <string name="name_of_currency">Название валют </string>
    <string name="buy_sell">покупка / \n продажа  </string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="error_load">невозможно загрузить свежые данные</string>
    <string name="ok_load">данные обновлены</string>
    <string name="search">поиск по списку</string>
    <string name="share">share</string>
    <string name="map">карта</string>
    <string name="link">сайт</string>
    <string name="call">позвонить</string>
    <string name="DB_is_update">База данных обновлена</string>
    <string name="DB_update_OK">Обновление прошло успешно</string>
    <string name="no_location_found">Адрес не найдено</string>
</resources>
